--- a/MoviesFinderApp.iOS/Info.plist
+++ b/MoviesFinderApp.iOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>MoviesFinderApp.iOS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.jda.mobility.MoviesFinderApp</string>
+	<string>com.codewithanas.mobility.MoviesFinderApp</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
